--- a/src/css-components/MusicApp.css
+++ b/src/css-components/MusicApp.css
@@ -35,7 +35,7 @@
     height: 85vh;
     border-radius: 44px;
     background-color: rgba(255, 222, 173, .2);
-    outline: 3px solid #eee;
+    border: 3px solid #eee;
     display: flex;
     align-items: center;
     flex-direction: column;
