--- a/src/css-components/Skills.css
+++ b/src/css-components/Skills.css
@@ -11,7 +11,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: burlywood;
+    background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: multiply;
     padding: 3em 0;
 }
@@ -62,7 +62,7 @@
     font-weight: bold;
     letter-spacing: 4px;
     font-style: italic;
-    text-shadow: 0 0 3px #111;
+    text-shadow: 0 0 1px #111;
 }
 
 .skills i {
